moving records to builder classes