@@ -8,15 +8,15 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import uk.gov.moj.cp.dto.ui.CaseDetailsDto;
-import uk.gov.moj.cp.dto.ui.CaseDetailsHearingDto;
-import uk.gov.moj.cp.dto.ui.CourtHouseDto;
-import uk.gov.moj.cp.dto.ui.CourtRoomDto;
-import uk.gov.moj.cp.dto.ui.AddressDto;
-import uk.gov.moj.cp.dto.CourtScheduleDto;
-import uk.gov.moj.cp.dto.HearingDto;
-import uk.gov.moj.cp.dto.CourtSittingDto;
-import uk.gov.moj.cp.dto.WeekCommencingDto;
+import uk.gov.moj.cp.dto.outbound.CaseDetailsDto;
+import uk.gov.moj.cp.dto.outbound.CaseDetailsHearingDto;
+import uk.gov.moj.cp.dto.outbound.CourtHouseDto;
+import uk.gov.moj.cp.dto.outbound.CourtRoomDto;
+import uk.gov.moj.cp.dto.outbound.AddressDto;
+import uk.gov.moj.cp.dto.inbound.CourtScheduleDto;
+import uk.gov.moj.cp.dto.inbound.HearingDto;
+import uk.gov.moj.cp.dto.inbound.CourtSittingDto;
+import uk.gov.moj.cp.dto.inbound.WeekCommencingDto;
 import uk.gov.moj.cp.metrics.TrackMyCaseMetricsService;
 import uk.gov.moj.cp.model.HearingType;
 
@@ -98,11 +98,18 @@ class CaseDetailsServiceTest {
         datePlus43 = LocalDate.now().plusDays(43).toString();
         datePlus50 = LocalDate.now().plusDays(50).toString();
 
-        courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
-        addressDto = new AddressDto(
-            "53", "Court Street",
-            "London", null, "CB4 3MX", "UK"
-        );
+        courtRoomDto = CourtRoomDto.builder()
+            .courtRoomId(123)
+            .courtRoomName("CourtRoom 01")
+            .build();
+
+        addressDto = AddressDto.builder()
+            .address1("53")
+            .address2("Court Street")
+            .address3("London")
+            .postalCode("CB4 3MX")
+            .country("UK")
+            .build();
     }
 
     @Test
@@ -114,7 +121,9 @@ class CaseDetailsServiceTest {
         ));
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -124,30 +133,30 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingType());
-        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingDescription());
-        assertEquals("Note1", caseHearingDetails.listNote());
+        var caseHearingDetails = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals(hearingId, caseHearingDetails.getHearingId());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.getHearingType());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.getHearingDescription());
+        assertEquals("Note1", caseHearingDetails.getListNote());
 
-        var schedule = caseHearingDetails.courtSittings().getFirst();
-        assertEquals(judgeId, schedule.judiciaryId());
-        assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
-        assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
-        assertEquals(futureSittingStartDate, schedule.sittingStart());
-        assertEquals(futureSittingEndDate, schedule.sittingEnd());
+        var schedule = caseHearingDetails.getCourtSittings().getFirst();
+        assertEquals(judgeId, schedule.getJudiciaryId());
+        assertEquals(courtHouseId, schedule.getCourtHouse().getCourtHouseId());
+        assertEquals(courtRoomId, schedule.getCourtHouse().getCourtRoomId());
+        assertEquals(futureSittingStartDate, schedule.getSittingStart());
+        assertEquals(futureSittingEndDate, schedule.getSittingEnd());
 
-        assertEquals("Lavender Hill", schedule.courtHouse().courtHouseName());
-        assertEquals("53", schedule.courtHouse().address().address1());
-        assertEquals("Court Street", schedule.courtHouse().address().address2());
-        assertEquals("London", schedule.courtHouse().address().address3());
+        assertEquals("Lavender Hill", schedule.getCourtHouse().getCourtHouseName());
+        assertEquals("53", schedule.getCourtHouse().getAddress().getAddress1());
+        assertEquals("Court Street", schedule.getCourtHouse().getAddress().getAddress2());
+        assertEquals("London", schedule.getCourtHouse().getAddress().getAddress3());
 
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomName());
+        assertEquals(123, schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomId());
+        assertEquals("CourtRoom 01", schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -162,7 +171,10 @@ class CaseDetailsServiceTest {
         ));
         final HearingDto hearingDto = createHearing(HearingType.SENTENCE.getValue(), pastCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
+
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
 
         when(courtScheduleService.getCourtScheduleByCaseUrn(eq(accessToken), eq(caseUrn))).thenReturn(List.of(
@@ -170,9 +182,9 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(0, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -190,7 +202,9 @@ class CaseDetailsServiceTest {
         List<CourtSittingDto> pastCourtSittings = List.of(createCourtSitting(pastSittingStartDate, pastSittingEndDate));
         final HearingDto hearingDto1 = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -201,29 +215,29 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingType());
-        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingDescription());
-        assertEquals("Note1", caseHearingDetails.listNote());
+        var caseHearingDetails = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals(hearingId, caseHearingDetails.getHearingId());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.getHearingType());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.getHearingDescription());
+        assertEquals("Note1", caseHearingDetails.getListNote());
 
-        var schedule = caseHearingDetails.courtSittings().getFirst();
-        assertEquals(judgeId, schedule.judiciaryId());
-        assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
-        assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
-        assertEquals(futureSittingStartDate, schedule.sittingStart());
-        assertEquals(futureSittingEndDate, schedule.sittingEnd());
+        var schedule = caseHearingDetails.getCourtSittings().getFirst();
+        assertEquals(judgeId, schedule.getJudiciaryId());
+        assertEquals(courtHouseId, schedule.getCourtHouse().getCourtHouseId());
+        assertEquals(courtRoomId, schedule.getCourtHouse().getCourtRoomId());
+        assertEquals(futureSittingStartDate, schedule.getSittingStart());
+        assertEquals(futureSittingEndDate, schedule.getSittingEnd());
 
-        assertEquals("53", schedule.courtHouse().address().address1());
-        assertEquals("Court Street", schedule.courtHouse().address().address2());
-        assertEquals("London", schedule.courtHouse().address().address3());
+        assertEquals("53", schedule.getCourtHouse().getAddress().getAddress1());
+        assertEquals("Court Street", schedule.getCourtHouse().getAddress().getAddress2());
+        assertEquals("London", schedule.getCourtHouse().getAddress().getAddress3());
 
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomName());
+        assertEquals(123, schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomId());
+        assertEquals("CourtRoom 01", schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -238,7 +252,9 @@ class CaseDetailsServiceTest {
         ));
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), currentCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -248,29 +264,29 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingType());
-        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingDescription());
-        assertEquals("Note1", caseHearingDetails.listNote());
+        var caseHearingDetails = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals(hearingId, caseHearingDetails.getHearingId());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.getHearingType());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.getHearingDescription());
+        assertEquals("Note1", caseHearingDetails.getListNote());
 
-        var schedule = caseHearingDetails.courtSittings().getFirst();
-        assertEquals(judgeId, schedule.judiciaryId());
-        assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
-        assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
-        assertEquals(currentSittingStartDate, schedule.sittingStart());
-        assertEquals(currentSittingEndDate, schedule.sittingEnd());
+        var schedule = caseHearingDetails.getCourtSittings().getFirst();
+        assertEquals(judgeId, schedule.getJudiciaryId());
+        assertEquals(courtHouseId, schedule.getCourtHouse().getCourtHouseId());
+        assertEquals(courtRoomId, schedule.getCourtHouse().getCourtRoomId());
+        assertEquals(currentSittingStartDate, schedule.getSittingStart());
+        assertEquals(currentSittingEndDate, schedule.getSittingEnd());
 
-        assertEquals("53", schedule.courtHouse().address().address1());
-        assertEquals("Court Street", schedule.courtHouse().address().address2());
-        assertEquals("London", schedule.courtHouse().address().address3());
+        assertEquals("53", schedule.getCourtHouse().getAddress().getAddress1());
+        assertEquals("Court Street", schedule.getCourtHouse().getAddress().getAddress2());
+        assertEquals("London", schedule.getCourtHouse().getAddress().getAddress3());
 
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomName());
+        assertEquals(123, schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomId());
+        assertEquals("CourtRoom 01", schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -284,7 +300,9 @@ class CaseDetailsServiceTest {
         final List<CourtSittingDto> courtSittings = List.of(createCourtSitting(todayStartDate, todayEndDate));
         final HearingDto hearingDto = createHearing(HearingType.SENTENCE.getValue(), courtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -294,29 +312,29 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals(HearingType.SENTENCE.getValue(), caseHearingDetails.hearingType());
-        assertEquals(HearingType.SENTENCE.getValue(), caseHearingDetails.hearingDescription());
-        assertEquals("Note1", caseHearingDetails.listNote());
+        var caseHearingDetails = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals(hearingId, caseHearingDetails.getHearingId());
+        assertEquals(HearingType.SENTENCE.getValue(), caseHearingDetails.getHearingType());
+        assertEquals(HearingType.SENTENCE.getValue(), caseHearingDetails.getHearingDescription());
+        assertEquals("Note1", caseHearingDetails.getListNote());
 
-        var schedule = caseHearingDetails.courtSittings().getFirst();
-        assertEquals(judgeId, schedule.judiciaryId());
-        assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
-        assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
-        assertEquals(todayStartDate, schedule.sittingStart());
-        assertEquals(todayEndDate, schedule.sittingEnd());
+        var schedule = caseHearingDetails.getCourtSittings().getFirst();
+        assertEquals(judgeId, schedule.getJudiciaryId());
+        assertEquals(courtHouseId, schedule.getCourtHouse().getCourtHouseId());
+        assertEquals(courtRoomId, schedule.getCourtHouse().getCourtRoomId());
+        assertEquals(todayStartDate, schedule.getSittingStart());
+        assertEquals(todayEndDate, schedule.getSittingEnd());
 
-        assertEquals("53", schedule.courtHouse().address().address1());
-        assertEquals("Court Street", schedule.courtHouse().address().address2());
-        assertEquals("London", schedule.courtHouse().address().address3());
+        assertEquals("53", schedule.getCourtHouse().getAddress().getAddress1());
+        assertEquals("Court Street", schedule.getCourtHouse().getAddress().getAddress2());
+        assertEquals("London", schedule.getCourtHouse().getAddress().getAddress3());
 
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().get(0).courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().get(0).courtRoomName());
+        assertEquals(123, schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomId());
+        assertEquals("CourtRoom 01", schedule.getCourtHouse().getCourtRooms().getFirst().getCourtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -336,7 +354,9 @@ class CaseDetailsServiceTest {
         ));
         final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), currentCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -346,10 +366,10 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
-        assertEquals(HearingType.SENTENCE.getValue(), caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
+        assertEquals(HearingType.SENTENCE.getValue(), caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getHearingType());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -364,7 +384,9 @@ class CaseDetailsServiceTest {
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
         final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), pastCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1))
+            .build();
 
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
         when(courtScheduleService.getCourtScheduleByCaseUrn(eq(accessToken), eq(caseUrn))).thenReturn(List.of(
@@ -372,9 +394,9 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(0, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -394,7 +416,9 @@ class CaseDetailsServiceTest {
         ));
         final HearingDto hearingDto1 = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -404,9 +428,9 @@ class CaseDetailsServiceTest {
 
         CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -420,7 +444,9 @@ class CaseDetailsServiceTest {
         final List<CourtSittingDto> courtSittings = List.of(futureSittingDto, currentSittingDto);
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), courtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -430,10 +456,10 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
-        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().getFirst().courtSittings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
+        assertEquals(2, caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getCourtSittings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -445,7 +471,9 @@ class CaseDetailsServiceTest {
         final List<CourtSittingDto> futureCourtSittings = List.of(futureSittingDto, futureSittingDto);
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -455,10 +483,10 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
-        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().getFirst().courtSittings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
+        assertEquals(2, caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getCourtSittings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -471,7 +499,9 @@ class CaseDetailsServiceTest {
         final List<CourtSittingDto> pastCourtSittings = List.of(pastSittingDto, pastSittingDto);
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
         when(courtScheduleService.getCourtScheduleByCaseUrn(eq(accessToken), eq(caseUrn))).thenReturn(List.of(
@@ -479,9 +509,9 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(0, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -495,7 +525,9 @@ class CaseDetailsServiceTest {
         final List<CourtSittingDto> courtSittings = List.of(pastSittingDto, futureSittingDto);
         final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), courtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -505,10 +537,10 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
-        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().getFirst().courtSittings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
+        assertEquals(2, caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getCourtSittings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -530,7 +562,9 @@ class CaseDetailsServiceTest {
         );
         final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), pastAndFutureCourtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -540,10 +574,10 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
-        assertEquals(HearingType.SENTENCE.getValue(), caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
+        assertEquals(HearingType.SENTENCE.getValue(), caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getHearingType());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -556,7 +590,9 @@ class CaseDetailsServiceTest {
         final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), List.of(futureSittingDto));
         final HearingDto hearingDto2 = createHearing("Invalid Type", List.of(futureSittingDto));
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1, hearingDto2));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1, hearingDto2))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -566,10 +602,10 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
-        assertEquals(HearingType.TRIAL.getValue(), caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
+        assertEquals(HearingType.TRIAL.getValue(), caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getHearingType());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -591,7 +627,9 @@ class CaseDetailsServiceTest {
 
         final HearingDto hearingDto2 = createHearing("Invalid Type", courtSittings1);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1, hearingDto2));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto, hearingDto1, hearingDto2))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -601,12 +639,12 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
         assertEquals(
             HearingType.SENTENCE.getValue(),
-            caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType()
+            caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getHearingType()
         );
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
@@ -624,13 +662,9 @@ class CaseDetailsServiceTest {
         final HearingDto hearingDto4 = createHearing("4", HearingType.TRIAL.getValue(), courtSittings);
         final HearingDto hearingDto5 = createHearing("Invalid Type", courtSittings);
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(
-            hearingDto1,
-            hearingDto3,
-            hearingDto2,
-            hearingDto4,
-            hearingDto5
-        ));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto1, hearingDto3, hearingDto2, hearingDto4, hearingDto5))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -640,13 +674,13 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        List<CaseDetailsHearingDto> hearings = caseDetails.courtSchedule().getFirst().hearings();
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        List<CaseDetailsHearingDto> hearings = caseDetails.getCourtSchedules().getFirst().getHearings();
         assertEquals(1, hearings.size());
 
-        assertEquals(HearingType.TRIAL.getValue(), hearings.getFirst().hearingType());
-        assertEquals("3", hearings.getFirst().hearingId());
+        assertEquals(HearingType.TRIAL.getValue(), hearings.getFirst().getHearingType());
+        assertEquals("3", hearings.getFirst().getHearingId());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -677,7 +711,9 @@ class CaseDetailsServiceTest {
             1
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto2, hearingDto1, hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto2, hearingDto1, hearingDto))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -686,19 +722,19 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
         assertEquals(
             HearingType.TRIAL.getValue(),
-            caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType()
+            caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getHearingType()
         );
 
         // Verify weekCommencing fields are set
-        final CaseDetailsHearingDto firstHearing = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals(datePlus7, firstHearing.weekCommencing().startDate());
-        assertEquals(datePlus13, firstHearing.weekCommencing().endDate());
-        assertEquals(1, firstHearing.weekCommencing().durationInWeeks());
+        final CaseDetailsHearingDto firstHearing = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals(datePlus7, firstHearing.getWeekCommencing().getStartDate());
+        assertEquals(datePlus13, firstHearing.getWeekCommencing().getEndDate());
+        assertEquals(1, firstHearing.getWeekCommencing().getDurationInWeeks());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -729,7 +765,9 @@ class CaseDetailsServiceTest {
             1
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto3, hearingDto1, hearingDto2));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto3, hearingDto1, hearingDto2))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -738,17 +776,17 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
         assertEquals(
             HearingType.SENTENCE.getValue(),
-            caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType()
+            caseDetails.getCourtSchedules().getFirst().getHearings().getFirst().getHearingType()
         );
 
-        final CaseDetailsHearingDto firstHearing = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals("1", firstHearing.hearingId());
-        assertNull(firstHearing.weekCommencing());
+        final CaseDetailsHearingDto firstHearing = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals("1", firstHearing.getHearingId());
+        assertNull(firstHearing.getWeekCommencing());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -791,13 +829,9 @@ class CaseDetailsServiceTest {
             1
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(
-            hearingDto3,
-            hearingDto2,
-            hearingDto4,
-            hearingDto1,
-            hearingDto5
-        ));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto3, hearingDto2, hearingDto4, hearingDto1, hearingDto5))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -806,16 +840,16 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        List<CaseDetailsHearingDto> hearings = caseDetails.courtSchedule().getFirst().hearings();
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        List<CaseDetailsHearingDto> hearings = caseDetails.getCourtSchedules().getFirst().getHearings();
         assertEquals(1, hearings.size());
 
-        assertEquals(HearingType.SENTENCE.getValue(), hearings.getFirst().hearingType());
-        assertEquals("1", hearings.getFirst().hearingId());
-        assertEquals(datePlus7, hearings.getFirst().weekCommencing().startDate());
-        assertEquals(datePlus14, hearings.getFirst().weekCommencing().endDate());
-        assertEquals(1, hearings.getFirst().weekCommencing().durationInWeeks());
+        assertEquals(HearingType.SENTENCE.getValue(), hearings.getFirst().getHearingType());
+        assertEquals("1", hearings.getFirst().getHearingId());
+        assertEquals(datePlus7, hearings.getFirst().getWeekCommencing().getStartDate());
+        assertEquals(datePlus14, hearings.getFirst().getWeekCommencing().getEndDate());
+        assertEquals(1, hearings.getFirst().getWeekCommencing().getDurationInWeeks());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -846,16 +880,18 @@ class CaseDetailsServiceTest {
             1
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto2, hearingDto1, hearingDto));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto2, hearingDto1, hearingDto))
+            .build();
 
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
         when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(0, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -885,10 +921,9 @@ class CaseDetailsServiceTest {
             courtSittings
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(
-            hearingWithCourtSitting,
-            hearingWithWeekCommencing
-        ));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingWithCourtSitting, hearingWithWeekCommencing))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -897,30 +932,19 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         // Verify that the weekCommencing hearing comes first (because today - 2 days < today + 3 days)
-        final CaseDetailsHearingDto firstHearing = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals("2", firstHearing.hearingId());
-        assertEquals(HearingType.SENTENCE.getValue(), firstHearing.hearingType());
+        final CaseDetailsHearingDto firstHearing = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals("2", firstHearing.getHearingId());
+        assertEquals(HearingType.SENTENCE.getValue(), firstHearing.getHearingType());
 
-        assertNull(firstHearing.weekCommencing());
-        assertNotNull(firstHearing.courtSittings());
-        assertEquals(1, firstHearing.courtSittings().size());
-        assertEquals(sittingStartDate, firstHearing.courtSittings().getFirst().sittingStart());
-
-
-        // Verify that the courtSitting hearing comes second
-       /* final CaseDetailsHearingDto secondHearing = caseDetails.courtSchedule().getFirst().hearings().get(1);
-        assertEquals("1", secondHearing.hearingId());
-        assertEquals(HearingType.TRIAL.getValue(), secondHearing.hearingType());
-        assertNotNull(secondHearing.weekCommencing());
-        assertEquals(weekCommencingStartDate, secondHearing.weekCommencing().startDate());
-        assertEquals(weekCommencingEndDate, secondHearing.weekCommencing().endDate());
-        assertEquals(1, secondHearing.weekCommencing().durationInWeeks());
-        assertNull(secondHearing.courtSittings());*/
+        assertNull(firstHearing.getWeekCommencing());
+        assertNotNull(firstHearing.getCourtSittings());
+        assertEquals(1, firstHearing.getCourtSittings().size());
+        assertEquals(sittingStartDate, firstHearing.getCourtSittings().getFirst().getSittingStart());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -947,10 +971,10 @@ class CaseDetailsServiceTest {
             courtSittings
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(
-            hearingWithCourtSitting,
-            hearingWithWeekCommencing
-        ));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingWithCourtSitting, hearingWithWeekCommencing))
+            .build();
+
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -959,16 +983,16 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        assertEquals(1, caseDetails.getCourtSchedules().getFirst().getHearings().size());
 
         // Verify that the weekCommencing hearing comes first (because today - 2 days < today + 3 days)
-        final CaseDetailsHearingDto firstHearing = caseDetails.courtSchedule().getFirst().hearings().getFirst();
-        assertEquals("2", firstHearing.hearingId());
-        assertEquals(HearingType.TRIAL.getValue(), firstHearing.hearingType());
-        assertNull(firstHearing.weekCommencing());
-        assertEquals(1, firstHearing.courtSittings().size());
+        final CaseDetailsHearingDto firstHearing = caseDetails.getCourtSchedules().getFirst().getHearings().getFirst();
+        assertEquals("2", firstHearing.getHearingId());
+        assertEquals(HearingType.TRIAL.getValue(), firstHearing.getHearingType());
+        assertNull(firstHearing.getWeekCommencing());
+        assertEquals(1, firstHearing.getCourtSittings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
@@ -1004,12 +1028,9 @@ class CaseDetailsServiceTest {
             1
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(
-            hearingDto3,
-            hearingDto1,
-            hearingDto2,
-            hearingDto4
-        ));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto3, hearingDto1, hearingDto2, hearingDto4))
+            .build();
 
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
         when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
@@ -1018,16 +1039,16 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        List<CaseDetailsHearingDto> hearings = caseDetails.courtSchedule().getFirst().hearings();
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        List<CaseDetailsHearingDto> hearings = caseDetails.getCourtSchedules().getFirst().getHearings();
         assertEquals(1, hearings.size());
 
-        assertEquals(HearingType.SENTENCE.getValue(), hearings.getFirst().hearingType());
-        assertEquals("1", hearings.getFirst().hearingId());
-        assertEquals(datePlus7, hearings.getFirst().weekCommencing().startDate());
-        assertEquals(datePlus14, hearings.getFirst().weekCommencing().endDate());
-        assertEquals(1, hearings.getFirst().weekCommencing().durationInWeeks());
+        assertEquals(HearingType.SENTENCE.getValue(), hearings.getFirst().getHearingType());
+        assertEquals("1", hearings.getFirst().getHearingId());
+        assertEquals(datePlus7, hearings.getFirst().getWeekCommencing().getStartDate());
+        assertEquals(datePlus14, hearings.getFirst().getWeekCommencing().getEndDate());
+        assertEquals(1, hearings.getFirst().getWeekCommencing().getDurationInWeeks());
     }
 
     @Test
@@ -1072,14 +1093,9 @@ class CaseDetailsServiceTest {
             1
         );
 
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(
-            hearingDto3,
-            hearingDto2,
-            hearingDto,
-            hearingDto1,
-            hearingDto4,
-            hearingDto5
-        ));
+        final CourtScheduleDto scheduleDto = CourtScheduleDto.builder()
+            .hearings(List.of(hearingDto3, hearingDto2, hearingDto, hearingDto1, hearingDto4, hearingDto5))
+            .build();
 
         when(courtHouseService.getCourtHouseById(eq(accessToken), eq(courtHouseId), any())).thenReturn(
             createCourtHouse(courtRoomDto, addressDto));
@@ -1088,40 +1104,39 @@ class CaseDetailsServiceTest {
 
         final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        List<CaseDetailsHearingDto> hearings = caseDetails.courtSchedule().getFirst().hearings();
+        assertEquals(caseUrn, caseDetails.getCaseUrn());
+        assertEquals(1, caseDetails.getCourtSchedules().size());
+        List<CaseDetailsHearingDto> hearings = caseDetails.getCourtSchedules().getFirst().getHearings();
         assertEquals(1, hearings.size());
 
-        assertEquals(HearingType.SENTENCE.getValue(), hearings.getFirst().hearingType());
-        assertEquals("1", hearings.getFirst().hearingId());
-        assertNull(hearings.getFirst().weekCommencing());
-        assertEquals(2, hearings.getFirst().courtSittings().size());
+        assertEquals(HearingType.SENTENCE.getValue(), hearings.getFirst().getHearingType());
+        assertEquals("1", hearings.getFirst().getHearingId());
+        assertNull(hearings.getFirst().getWeekCommencing());
+        assertEquals(2, hearings.getFirst().getCourtSittings().size());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
 
     private CourtSittingDto createCourtSitting(final String sittingStartDate, final String sittingEndDate) {
-
-        return new CourtSittingDto(
-            sittingStartDate,
-            sittingEndDate,
-            judgeId,
-            courtHouseId,
-            courtRoomId
-        );
+        return CourtSittingDto.builder()
+           .sittingStart(sittingStartDate)
+           .sittingEnd(sittingEndDate)
+           .judiciaryId(judgeId)
+           .courtHouse(courtHouseId)
+           .courtRoom(courtRoomId)
+           .build();
     }
 
     private CourtHouseDto createCourtHouse(final CourtRoomDto courtRoomDto, final AddressDto addressDto) {
-        return new CourtHouseDto(
-            courtHouseId,
-            courtRoomId,
-            "CROWN",
-            "123",
-            "Lavender Hill",
-            addressDto,
-            Arrays.asList(courtRoomDto)
-        );
+        return CourtHouseDto.builder()
+            .courtHouseId(courtHouseId)
+            .courtRoomId(courtRoomId)
+            .courtHouseType("CROWN")
+            .courtHouseCode("123")
+            .courtHouseName("Lavender Hill")
+            .address(addressDto)
+            .courtRooms(Arrays.asList(courtRoomDto))
+            .build();
     }
 
     private HearingDto createHearing(String hearingType, List<CourtSittingDto> courtSittings) {
@@ -1141,12 +1156,20 @@ class CaseDetailsServiceTest {
     private HearingDto createHearingWithWeeks(String hearingId, String hearingType,
                                               String startDate, String endDate,
                                               int durationInWeeks) {
+
+        final WeekCommencingDto weekCommencingDto = WeekCommencingDto.builder()
+            .courtHouse(courtHouseId)
+            .startDate(startDate)
+            .endDate(endDate)
+            .durationInWeeks(durationInWeeks)
+            .build();
+
         return HearingDto.builder()
             .hearingId(hearingId)
             .hearingType(hearingType)
             .hearingDescription(hearingType)
             .listNote("Note1")
-            .weekCommencing(new WeekCommencingDto(courtHouseId, startDate, endDate, durationInWeeks))
+            .weekCommencing(weekCommencingDto)
             .build();
     }
 }
